@@ -3,4 +3,5 @@
    <setting id="username" type="text" label="30013"/>
    <setting id="password" type="text" label="30014" option="hidden"/>
    <setting label="30022" type="action" action="RunScript(plugin.video.mlslive, favorite)"/>
+   <setting label="30029" type="action" action="RunScript(plugin.video.mlslive, logout)"/>
 </settings>
