@@ -23,7 +23,14 @@ parser.add_option('-c', '--clubs', action='store_true', dest='clubs',
 my_mls = mlslive.MLSLive()
 
 if options.clubs:
-    my_mls.getClubs()
+    clubs = my_mls.getClubs()
+    if clubs == None:
+        print "Unable to get clubs"
+        sys.exit(1)
+    for club in clubs:
+        if club['isMLS']:
+            print "{0}) {1}".format(club['id'], club['name']['full'])
+
     sys.exit(0)
 
 if options.user != None and options.password != None:
@@ -35,6 +42,11 @@ if options.user != None and options.password != None:
 
 if options.game == None:
     games = my_mls.getGames(xff = options.xff)
+
+    if games == None:
+        print "ERROR: Unable to get games list"
+        sys.exit(1)
+
     for game in games:
         game_str = my_mls.getGameString(game, '{1} at {0}')
         print '\t{0}) {1}'.format(game['optaId'], game_str) 
@@ -48,7 +60,22 @@ else:
 
     # just choose the first stream for testing purposes
     media = streams[0]
-    streams = my_mls.getStreamURIs(media, options.xff)
+    try:
+        streams = my_mls.getStreamURIs(media, options.xff)
+    except RuntimeError as ex:
+        print "'{0}'".format(str(ex)[:12])
+        sys.exit(1)
+
+    if streams == None:
+        print "Unable to get stream uris..."
+        sys.exit(1)
+
     for stream in streams.keys():
         print stream + ' ' + streams[stream]
+    stream = streams['6000000']
+    details = stream.split('|')
+    ffmpeg_fmt = '-headers "Authorization: {0}" -user_agent "{1}" {2}'
+    print ffmpeg_fmt.format(details[1].split('&')[1].split('=')[1],
+                            details[1].split('&')[0].split('=')[1],
+                            details[0])
 sys.exit(0)
